--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
+    "@types/node": "^22.5.2",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.57.0",
