--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@types/css-modules": "^1.0.5",
     "@types/node": "^22.5.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -27,6 +28,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "typescript-plugin-css-modules": "^5.1.0",
     "vite": "^5.3.1"
   }
 }
